[metadata]
name = lane2lane
description = A Python library for creating flexible, chainable, and prioritized processing pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
author = Talisik Team
version = 1.10.0
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	# Programming Language :: Python :: 3.6
	# Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
install_requires = 
	fun-things
	loguru
	simple-chalk
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no

